syntax = "proto3";

package proto.v1;

option go_package = "./pb";


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1 ;
  string password = 2 ;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name = 1 ;
  string email = 2 ;
  string password = 3 ;
}

message RegisterResponse {
  string id = 1;
  string token = 2;
}

message ValidateTokenRequest {
  string token = 1 ;
}

message ValidateTokenResponse {
  string id = 1;
  bool valid = 2;
}
